@@ -156,8 +156,8 @@ uint -> GL_UNSIGNED_INT
 load add mult return
 
 (* glDrawPixels *)
-color_index stencil_index depth_component rgba
-red green blue alpha rgb luminance luminance_alpha
+color_index stencil_index depth_component rgb bgr rgba bgra
+red green blue alpha luminance luminance_alpha
 
 (* glHint *)
 dont_care fastest nicest
